<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.user.SingInFragment">


    <EditText
        android:id="@+id/editTextTextPersonNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/tc_number"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/editTextTextPersonPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNumber" />

    <Button
        android:id="@+id/singInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sing_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPassword" />

    <TextView
        android:id="@+id/iNotMemberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:text="@string/i_am_not_member"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/singInBtn"
        app:layout_constraintTop_toBottomOf="@+id/singInBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:contentDescription="@string/app_name"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_baseline_local_hospital_24"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonNumber"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNumber"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/doctorType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor" />

        <RadioButton
            android:id="@+id/personType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>